# comfy-benchmark

./: .gitignore  Cargo.toml  Makefile  README.md  generate-assets.sh
bevymark/: Cargo.toml
bevymark/src/: main.rs
comfy-asset-benchmark/: Cargo.toml
comfy-asset-benchmark/src/: main.rs
comfy-rectangles/: Cargo.toml
comfy-rectangles/src/: main.rs
comfymark/: Cargo.toml
comfymark/src/: main.rs
