[workspace]
resolver = "2"
members = ["comfy-asset-benchmark", "comfy-rectangles", "comfymark", "bevymark"]

[profile.dev]
opt-level = 3
[profile.dev.package."*"]
opt-level = 3

[profile.release]
# lto = true
codegen-units = 1
strip = true
panic = "abort"

[profile.web-release]
inherits = "release"
opt-level = "s"
strip = "debuginfo"

[profile.stress-test]
inherits = "release"
# lto = "fat"
panic = "abort"

[workspace.dependencies]
comfy = { path = "../comfy/comfy", features = ["tracy", "dev"] }
